Logical definition with filtered trees (#49)
* Replace spotify docker plugin

Replace spotify docker plugin with maven-exec plugin.  Replacing this because the spotify plugin is obsolete and does not work on Apple Silicon.

* Remove commented out plugins that are no longer needed

* ci: version bump 1.3.8

* Add arg to specify path to Jar file

* Use maven-exec plugin and install for docker push

* ci: version bump 1.3.9

* Remove release profile

* ci: version bump 1.3.10

* Addresses https://github.com/who-icatx/icatx-project/issues/77

This incorporates webprotege-forms directly into this webprotege-backend-service

* Remove WebProtegeFormsApiApplication

Tests passed locally with this class but (thankfully) failed during CI

* Added OWLDataFactory bean that was previously in an imported config

* ci: version bump 1.3.11

* Fixes #39

* ci: version bump 1.3.12

* Modified class hierarchy provider to support a fixed root class

* Initial push with unfinished get logical definitons

* Deleted unnecessary classes

* fixwd some compilation errors, still does not work

* created extractors for logical definitions and necessary conditions, made them beans, simplified the response of the GetLogicalDefinitionsActionHandler

* fixing fetch logical definitions

* added the action for update logical definitions and necessary conditions, the request, response, and data structure LogicalConditions

* Major changes in the way we provide hierarchies (wip)

* Removed System.err printing

* implemented the update logical definitions

* removed some @notnull annotations from params

* fixing command binding issues

* fix for generating subclass axioms rather than equivalent axiom

* fix for getting the logical defs

* refactored to use accumulator

* fixed bug on fetching parent.

* Set backend-api dependency to 2.0.1

* partially merged

* fixed instantiating the array.

* added filtered trees

* Filtered h