@@ -1,12 +1,14 @@
 package edu.stanford.protege.webprotege.hierarchy;
 
 import com.google.common.base.Stopwatch;
+import edu.stanford.protege.webprotege.DataFactory;
 import edu.stanford.protege.webprotege.change.OntologyChange;
 import edu.stanford.protege.webprotege.common.ProjectId;
 import edu.stanford.protege.webprotege.icd.actions.AncestorHierarchyNode;
 import edu.stanford.protege.webprotege.index.*;
 import edu.stanford.protege.webprotege.inject.ProjectSingleton;
 import kotlin.Pair;
+import edu.stanford.protege.webprotege.common.ProjectId;
 import org.protege.owlapi.inference.orphan.TerminalElementFinder;
 import org.semanticweb.owlapi.model.*;
 import org.slf4j.Logger;
@@ -31,7 +33,6 @@ import static java.util.stream.Collectors.toSet;
  * Bio-Health Informatics Group<br>
  * Date: 17-Jan-2007<br><br>
  */
-@ProjectSingleton
 public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLClass> implements ClassHierarchyProvider {
 
     private static final Logger logger = LoggerFactory.getLogger(ClassHierarchyProviderImpl.class);
@@ -40,7 +41,7 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
     private final ProjectId projectId;
 
     @Nonnull
-    private final OWLClass root;
+    private final Set<OWLClass> roots;
 
     @Nonnull
     private final TerminalElementFinder<OWLClass> rootFinder;
@@ -70,7 +71,7 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
 
     @Inject
     public ClassHierarchyProviderImpl(ProjectId projectId,
-                                      @Nonnull @ClassHierarchyRoot OWLClass rootCls,
+                                      @Nonnull @ClassHierarchyRoot Set<OWLClass> roots,
                                       @Nonnull ProjectOntologiesIndex projectOntologiesIndex,
                                       @Nonnull SubClassOfAxiomsBySubClassIndex subClassOfAxiomsIndex,
                                       @Nonnull EquivalentClassesAxiomsIndex equivalentClassesAxiomsIndex,
@@ -78,7 +79,8 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
                                       @Nonnull EntitiesInProjectSignatureByIriIndex entitiesInProjectSignatureByIriIndex,
                                       @Nonnull ClassHierarchyChildrenAxiomsIndex classHierarchyChildrenAxiomsIndex) {
         this.projectId = checkNotNull(projectId);
-        this.root = checkNotNull(rootCls);
+        this.roots = new LinkedHashSet<>(checkNotNull(roots));
+        checkRoots(roots);
         this.projectOntologiesIndex = projectOntologiesIndex;
         this.subClassOfAxiomsIndex = subClassOfAxiomsIndex;
         this.equivalentClassesAxiomsIndex = equivalentClassesAxiomsIndex;
@@ -89,21 +91,38 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
         nodesToUpdate.clear();
     }
 
+    private static void checkRoots(Set<OWLClass> roots) {
+        if(roots.stream().anyMatch(OWLClass::isOWLThing)) {
+            if(roots.size() != 1) {
+                throw new RuntimeException("Bad specification of root classes in class hierarchy.  Specified root classes: " + roots + ".  If owl:Thing is specified as a root then it must be the one and only root.");
+            }
+        }
+
+    }
+
+
     public synchronized Collection<OWLClass> getParents(OWLClass object) {
         rebuildIfNecessary();
-        // If the object is thing then there are no
-        // parents
-        if (object.equals(root)) {
+        // If the object is the root then there
+        // are no parents
+        if(roots.contains(object)) {
             return Collections.emptySet();
         }
         Stream<OWLClass> parentsCombined = getParentsStream(object);
         var parents = parentsCombined.collect(toSet());
         // Thing if the object is a root class
-        if (rootFinder.getTerminalElements()
-                .contains(object)) {
-            parents.add(root);
+        if (hasOwlThingAsRoot()) {
+            // Add orphans, by the semantics of OWL
+            if (rootFinder.getTerminalElements()
+                    .contains(object)) {
+                parents.add(DataFactory.getOWLThing());
+            }
         }
         return parents;
+    }
+
+    private boolean hasOwlThingAsRoot() {
+        return roots.stream().anyMatch(OWLClass::isOWLThing);
     }
 
     @Override
@@ -171,16 +190,17 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
     public synchronized void handleChanges(@Nonnull List<OntologyChange> changes) {
         Set<OWLClass> oldTerminalElements = new HashSet<>(rootFinder.getTerminalElements());
         Set<OWLClass> changedClasses = new HashSet<>();
-        changedClasses.add(root);
-        var filteredChanges = this.filterIrrelevantChanges(changes);
+        changedClasses.addAll(roots);
+        var filteredChanges = filterIrrelevantChanges(changes);
         updateImplicitRoots(filteredChanges);
-        for (OntologyChange change : filteredChanges) {
+        for(OntologyChange change : filteredChanges) {
             changedClasses.addAll(change.getSignature()
-                    .stream()
-                    .filter(OWLEntity::isOWLClass)
-                    .filter(entity -> !entity.equals(root))
-                    .map(entity -> (OWLClass) entity)
-                    .toList());
+                                        .stream()
+                                        .filter(OWLEntity::isOWLClass)
+                                        .map(OWLEntity::asOWLClass)
+                                        .filter(entity -> !roots.contains(entity))
+                                        .map(entity -> (OWLClass) entity)
+                                        .toList());
         }
         changedClasses.forEach(this::registerNodeChanged);
         rootFinder.getTerminalElements()
@@ -199,28 +219,32 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
 
 
     private void updateImplicitRoots(List<OntologyChange> changes) {
+        if(!hasOwlThingAsRoot()) {
+            return;
+        }
         Set<OWLClass> possibleTerminalElements = new HashSet<>();
         Set<OWLClass> notInOntologies = new HashSet<>();
 
         // only listen for changes on the appropriate ontologies
         changes.stream()
-                .filter(OntologyChange::isAxiomChange)
-                .forEach(change -> {
-                    boolean remove = change.isRemoveAxiom();
-                    var axiom = change.getAxiomOrThrow();
-                    axiom.getSignature()
-                            .stream()
-                            .filter(OWLEntity::isOWLClass)
-                            .filter(entity -> !entity.equals(root))
-                            .forEach(entity -> {
-                                OWLClass cls = (OWLClass) entity;
-                                if (!remove || containsReference(cls)) {
-                                    possibleTerminalElements.add(cls);
-                                } else {
-                                    notInOntologies.add(cls);
-                                }
-                            });
-                });
+               .filter(OntologyChange::isAxiomChange)
+               .forEach(change -> {
+                   boolean remove = change.isRemoveAxiom();
+                   var axiom = change.getAxiomOrThrow();
+                   axiom.getSignature()
+                        .stream()
+                        .filter(OWLEntity::isOWLClass)
+                           .map(OWLEntity::asOWLClass)
+                        .filter(entity -> !roots.contains(entity))
+                        .forEach(entity -> {
+                            if(!remove || containsReference(entity)) {
+                                possibleTerminalElements.add(entity);
+                            }
+                            else {
+                                notInOntologies.add(entity);
+                            }
+                        });
+               });
 
         possibleTerminalElements.addAll(rootFinder.getTerminalElements());
         possibleTerminalElements.removeAll(notInOntologies);
@@ -236,25 +260,40 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
     }
 
     public synchronized boolean containsReference(OWLClass object) {
-        return entitiesInProjectSignatureByIriIndex
+        if(roots.contains(object)) {
+            return true;
+        }
+        var containsInSig = entitiesInProjectSignatureByIriIndex
                 .getEntitiesInSignature(object.getIRI())
                 .anyMatch(entity -> entity.equals(object));
+        if(!containsInSig) {
+            return false;
+        }
+        if(hasOwlThingAsRoot()) {
+            return true;
+        }
+        else {
+            return !getPathsToRoot(object).isEmpty();
+        }
     }
 
     public synchronized Collection<OWLClass> getRoots() {
         rebuildIfNecessary();
-        return Collections.singleton(root);
+        return Set.copyOf(roots);
     }
 
     public synchronized Collection<OWLClass> getChildren(OWLClass object) {
         rebuildIfNecessary();
         Set<OWLClass> result;
-        if (object.equals(root)) {
+        if(roots.contains(object)) {
             result = new HashSet<>();
-            result.addAll(rootFinder.getTerminalElements());
+            if (hasOwlThingAsRoot()) {
+                result.addAll(rootFinder.getTerminalElements());
+            }
             result.addAll(extractChildren(object));
             result.remove(object);
-        } else {
+        }
+        else {
             result = extractChildren(object);
             //            result.removeIf(curChild -> getAncestors(object).contains(curChild));
         }
@@ -282,6 +321,14 @@ public class ClassHierarchyProviderImpl extends AbstractHierarchyProvider<OWLCla
     @Override
     public boolean isLeaf(OWLClass object) {
         return classHierarchyChildrenAxiomsIndex.isLeaf(object);
+    }
+
+    @Override
+    public boolean contains(Object object) {
+        if(!(object instanceof OWLClass)) {
+            return false;
+        }
+        return containsReference((OWLClass) object);
     }
 
     @Override
